--- a/AndroidLabs/app/src/main/res/layout/activity_start.xml
+++ b/AndroidLabs/app/src/main/res/layout/activity_start.xml
@@ -13,14 +13,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_message" />
+        android:gravity="center"
+        android:text="@string/hello_message"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView2" />
 
     <Button
         android:text="@string/ButtonText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
         android:id="@+id/button"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/textView2" />
 </RelativeLayout>
