--- a/AndroidLabs/app/src/main/res/layout/activity_start.xml
+++ b/AndroidLabs/app/src/main/res/layout/activity_start.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginTop="20dp"
         android:text="@string/hello_message"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
