--- a/AndroidLabs/app/src/main/res/layout/activity_list_items.xml
+++ b/AndroidLabs/app/src/main/res/layout/activity_list_items.xml
@@ -10,7 +10,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cst2335.vanm0012.androidlabs.ListItemsActivity">
+    tools:context="cst2335.vanm0012.androidlabs.ListItemsActivity"
+    android:gravity="fill" >
 
     <RadioButton
         android:text="RadioButton"
@@ -19,8 +20,7 @@
         android:id="@+id/radioButton"
         android:layout_row="0"
         android:layout_column="0"
-        android:layout_columnWeight="1"
-        android:gravity="fill" />
+        android:layout_columnWeight="1" />
     <CheckBox
         android:text="CheckBox"
         android:layout_width="wrap_content"
@@ -28,8 +28,7 @@
         android:id="@+id/checkBox"
         android:layout_row="0"
         android:layout_column="1"
-        android:layout_columnWeight="1"
-        android:gravity="fill" />
+        android:layout_columnWeight="1" />
     <Switch
         android:text="@string/switch_message"
         android:layout_width="wrap_content"
@@ -37,8 +36,7 @@
         android:id="@+id/switch1"
         android:layout_row="1"
         android:layout_column="0"
-        android:layout_columnWeight="1"
-        android:gravity="fill" />
+        android:layout_columnWeight="1" />
     <ImageButton
         android:text="ImageButton"
         android:layout_width="32dp"
@@ -47,6 +45,5 @@
         android:layout_row="1"
         android:layout_column="1"
         android:layout_columnWeight="1"
-        android:gravity="fill"
         android:background="@android:drawable/btn_star_big_on" />
 </GridLayout>
