--- a/AndroidLabs/app/src/main/res/layout/activity_list_items.xml
+++ b/AndroidLabs/app/src/main/res/layout/activity_list_items.xml
@@ -26,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/checkBox"
+        android:focusable="false"
         android:layout_row="0"
         android:layout_column="1"
         android:layout_columnWeight="1" />
