--- a/AndroidLabs/app/src/main/res/layout/activity_start.xml
+++ b/AndroidLabs/app/src/main/res/layout/activity_start.xml
@@ -28,4 +28,13 @@
         android:layout_marginTop="30dp"
         android:id="@+id/button"
         android:layout_below="@+id/textView2" />
+
+    <Button
+        android:text="@string/startChatButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:id="@+id/startChatButton"
+        android:layout_below="@+id/button"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
