--- a/AndroidLabs/app/src/main/res/layout/activity_start.xml
+++ b/AndroidLabs/app/src/main/res/layout/activity_start.xml
@@ -46,4 +46,13 @@
         android:id="@+id/startWeatherButton"
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="@string/startTestToolbarButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="90dp"
+        android:id="@+id/startTestToolbarButton"
+        android:layout_below="@+id/button"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
