--- a/AndroidLabs/app/src/main/res/layout/activity_test_toolbar.xml
+++ b/AndroidLabs/app/src/main/res/layout/activity_test_toolbar.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cst2335.vanm0012.androidlabs.TestToolbar">
+    tools:context="cst2335.vanm0012.androidlabs.TestToolbar"
+    android:id="@+id/activity_test_toolbar" >
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
